	* Beta support for SSL connections for AIM and ICQ accounts.  To
	  enable, check the "Use SSL" option from the Advanced tab when
	  editing your AIM or ICQ account. (Paul Aurich)
	* Fix a memory leak in SILC. (Luke Petre)
	* Fix some string handling in the SIMPLE prpl, which fixes some buddy name
	  handling and other issues. (Paul Aurich, Marcus Sundberg)

	ICQ:
	* Fix retrieval of status messages from users of ICQ 6.x, Miranda, and
	  other libpurple clients. (Daniel Ljungborg)
	* Change client ID to match ICQ Basic 14.34.3096.  This fixes publishing
	  of buddy icons and available messages.
	* Properly publish status messages for statuses other than Available.
	  ICQ 6.x users can now see these status messages. (Daniel Ljungborg)
	* Fix recipt of messages from the mobile client Slick. (David Jedelsky)

	MSN:
	* Fix transfer of buddy icons, custom smileys, and files from the
	  latest Windows Live Messenger 9 official client. (Thomas
	  Gibson-Robinson)
	* Large (multi-part) messages are now correctly re-combined.
	* Federated/Yahoo! buddies should now stop creating sync issues at
	  every signin.  You may need to remove duplicates in the Address
	  Book.  See the FAQ for more information.  Thanks to Jason Lingohr
	  for lots of debugging and testing.
	* Messages from Yahoo! buddies are no longer silently dropped.
	* We now save and use the CacheKey for ABCH SOAP requests.
	* Don't try to parse Personal Status Messages or Current Media if they
	  don't exist.
	* Convert from ISO-8859-1 encoding to UTF-8 when no charset is specified
	  on incoming messages.  This should fix some issues with messages from
	  older clients.
	* Force sending the font "Segoe UI" if outgoing formatting doesn't specify
	  a font already.
	* Queue callbacks when token updates are in progress to prevent two token
	  update attempts from trampling each other.
	* Fixed a crash on Windows when removing a buddy's alias.
	* Update the Address Book when buddies' friendly names change.  This